--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "TaskManager",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Учебный проект «Менеджер задач» от HTML Academy",
-  "scripts": {
-    "eslint": "eslint src/**/*.js",
-    "test": "npm run eslint"
-  },
-  "devDependencies": {
-    "eslint": "6.1.0",
-    "eslint-config-htmlacademy": "0.5.2"
-  },
-  "engines": {
-    "node": "10"
-  }
+    "name": "taskmanager",
+    "version": "11.0.0",
+    "description": "Task Manager",
+    "scripts": {
+        "build": "webpack",
+        "eslint": "eslint src/**/*.js",
+        "start": "webpack-dev-server --open",
+        "test": "npm run eslint"
+    },
+    "devDependencies": {
+        "eslint": "6.1.0",
+        "eslint-config-htmlacademy": "0.5.2",
+        "webpack": "5.71.0",
+        "webpack-cli": "4.9.2",
+        "webpack-dev-server": "4.7.4"
+    },
+    "engines": {
+        "node": "10"
+    }
 }
